hugo/static/css/custom.css
:root {
    --INTERNAL-ACCENT-color: #dfa22c;
}

article.default > p {
    font-size: 1.2em;
}

article.default a {
    font-weight: bold;
}


h1 {
    text-transform: none;
}

.edit .box-label {
    background-color: #0C7992 !important;
    color: #000 !important;
}

.run .box-label.primary {
    background-color: #0C2882 !important;
}

.run .box-label.secondary {
    background-color: #dfa22c !important;
}

.run .box-label.root, 
.run .box-label.warning {
    background-color: #c00 !important;
}

.notices.credits .box-label {
    background-color: #6C3082 !important;
}

.stdout .box-content,
.run .box-content,
.edit .box-content {
    padding: 0 !important;
}

.run pre, 
.edit pre {
    margin: 0 !important;
}

.run .box-content span,
.run .box-content code,
.edit .box-content span,
.edit .box-content code {
    display: block;
    border: none;
    padding: 0;
}

.run .box-content pre,
.edit .box-content pre {
    display: block;
    border: none;
    background-color: #111;
}

.run .copy-to-clipboard-button,
.edit .copy-to-clipboard-button {
    position: relative;
    scale: 2;
    float:right;
    right: 0;
    margin-right: 15px;
    margin-top: -28px;
    background: none;
}

.run:hover .copy-to-clipboard-button i,
.edit:hover .copy-to-clipboard-button i {
    display: initial;
}

.run .copy-to-clipboard-button i,
.edit .copy-to-clipboard-button i {
    display: none;
    opacity: 0.5;
}

.run .copy-to-clipboard-button i:hover,
.edit .copy-to-clipboard-button i:hover {
    color: rgba( 130, 229, 80, 1 );
    opacity: 1;
}

.run .copy-to-clipboard-button i:active,
.edit .copy-to-clipboard-button i:active {
    font-weight: 800;
}

.anchor {
    scroll-margin: 20px;
}

div.index {
    padding: 1em;
    margin: 1em;
    line-height: 1.8em;
    font-weight: bold;
}

.badge {
    font-size: 1.5em;
}

.badge-content p {
    display: inline;
}

.box-label {
    font-weight: bold !important;
}

#R-header img.logo {
    width: 13vw;
}



mark {
    padding-left: 0.2em;
    padding-right: 0.2em;
    font-weight: 400;
}

article.default aside {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 40%;
    font-style: italic;
    box-shadow: rgb(33, 78, 101) 5px 0px 5px -5px inset;
    margin-left: 60%;
    padding-left: 1.5rem;
}

@media only screen and (max-width: 600px) {
  h1 {
      font-size: 2em;
  }
  article.default aside {
    width: 80%;
    margin-left: 20%;    
  }
}

